--- a/view/jatin-made/sign_inANDsign_up.css
+++ b/view/jatin-made/sign_inANDsign_up.css
@@ -192,6 +192,7 @@
 input#User-id,
 input#Email-id,
 input#Password-id,
+input#Profile-id,
 input#mobile-id,
 input#sign-in-email,
 input#sign-in-password{
